# NavBot

./: .gitignore  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  floatlayout.kv  main.py  mainUI.py  my.kv  physical-compose.yaml  robotUI.py  startup.sh  touch.kv  ui_system.py  webot_ros_launch.sh
CentralLogic/: Map.kv
CentralLogic/KeyBoard/: default.json
Central_Logic/: Dockerfile
Central_Logic/project/src/: main.py
GUI/: Dockerfile  Dockerfile.dev
GUI/project/src/: Alerts.kv  Connect.py  KioskUI.py  main.py
MotorAPI/: Dockerfile  Dockerfile.Ard  Dockerfile.dev
MotorAPI/header_test_main/: TestLibrary.cpp  TestLibrary.h  header_test_main.ino
MotorAPI/main/: main.ino  motor.cpp  motor.h
MotorAPI/project/src/: main.py
Navigation/: Dockerfile
Navigation/project/src/: main.py
Ocular/project/: CMakeLists.txt
Ocular/project/src/: main.py
PeripheralOperations/: temp.ino
PeripheralOperations/src/: sketch.ino
Project/: Alerts.kv  Connect.py  KioskUI 2.py  KioskUI.py  Map.kv  Navigation.py  Settings.kv  Template.kv  feedback.kv  kivyTest.py  main.py  screen 2.kv  screen.kv  suspend.kv
Project/Images/: 3DPC_Constitution_(Spring_2019).docx
Simulation/: Basic  Dockerfile.dev  docker-entrypoint.sh  server.sh
Simulation/PersistingDir/project/: package.xml
Simulation/PersistingDir/project/src/: main.py
Simulation/PersistingDir/simulation_description/: CMakeLists.txt  model.config  package.xml
Simulation/PersistingDir/simulation_description/meshes/: why.dae
Simulation/PersistingDir/simulation_description/urdf/: NavBot.sdf  NavBotTesting.sdf
Simulation/PersistingDir/simulation_gazebo/: CMakeLists.txt  package.xml
Simulation/PersistingDir/simulation_gazebo/launch/: main.launch
Simulation/PersistingDir/simulation_gazebo/worlds/: MY.world  YOUR.world
Simulation/Project/: runtime.ini
Simulation/Project/controllers/front_command/: front_command
Simulation/Project/session/: local.json
Simulation/Project/simulation/: local.json
Simulation/Project/worlds/: basic.wbt
Simulation/project/src/: main.py  sketch.ino
SimulationDockerBuild/: Dockerfile
UserInterface/: Alert.py  KioskUI.py  Settings.kv  main.py
catkin_ws/: README.md
catkin_ws/src/move_navrobot/: CMakeLists.txt  package.xml
catkin_ws/src/move_navrobot/src/: robot_navbot_controller.cpp  robot_util.py  simple_controller.py  simple_lidar_controller.py
nav2/: Dockerfile
nav2/src/nav_launch/: CMakeLists.txt  package.xml
nav2/src/nav_launch/config/: params.yml
nav2/src/nav_launch/launch/: nav.launch.py
publisher/: docker-compose.yaml
publisher/realsense/src/realsense_launch/: CMakeLists.txt
publisher/rtab/src/rtab_launch/: CMakeLists.txt  package.xml
realsense/: Dockerfile
realsense/realsense_py/: package.xml  setup.cfg  setup.py
realsense/src/realsense/: package.xml  setup.py
realsense/src/realsense/realsense/: realsense.py
realsense/src/realsense_launch/: package.xml
realsense/src/realsense_launch/config/: gazebo_params.yaml
ros1-master/: Dockerfile.dev
rtab/: Dockerfile
rtab/src/rtab_launch/launch/: rtab.launch.py
rviz2/: pane.rviz
state_publisher/: Dockerfile
state_publisher/src/handheld_description/: CMakeLists.txt  package.xml
state_publisher/src/handheld_description/urdf/: _d435.urdf.xacro  _d435i.urdf.xacro  handheld.urdf.xacro  test_d435_camera.urdf.xacro
state_publisher/src/state_publisher_launch/: CMakeLists.txt  package.xml
subscriber/: Dockerfile
webots_sim/: .gitignore
webots_sim/controllers/base_display_controller/: base_display_controller.py  geometry_util.py  odometry_system.py  robot_system.py  ui_system.py
webots_sim/controllers/move_forward_controller/: CMakeLists.txt  move_forward_controller  move_forward_controller.c
webots_sim/controllers/my_robot_supervisor/: my_robot_supervisor.py
webots_sim/nodes/: NavBot_Robot.wbo  Navbot_Lidar.wbo
webots_sim/protos/: .NavBot.cache  .NavBot_Lidar.cache  NavBot.proto  NavBot_Lidar.proto
webots_sim/scripts/: launch_ros_sim.bash
webots_sim/worlds/: navbot-with-normal-controller.wbt  navbot-with-ros-controller.wbt  navbot.wbt
(+7 files in other folders)
