<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_launch</name>
  <version>1.0.0</version>
  <description>Provides launch and configuration scripts for a Gazebo simulated iRobot(R) Create(R) 3 Educational Robot.</description>
  <maintainer email="mizzourrobotics@gmail.com">MizzouRobotics</maintainer>
  <license>BSD</license>

  <author>MU Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
