<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>handheld_description</name>
  <version>1.0.0</version>
  <description>Description of Realsense Handheld</description>
  <maintainer email="mizzourrobotics@gmail.com">MizzouRobotics</maintainer>
  <license>BSD</license>

  <author>MU Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
